Fixed that the JA/NEJ-buttons overlapped the statement to which they are answers on IE11 in the SVG-version

--- a/dev/scss/components/_statements-svg.scss
+++ b/dev/scss/components/_statements-svg.scss
@@ -33,8 +33,8 @@
 
         & li {
           position: relative;
-          min-width: 24px;
-          height: 24px;
+          min-width: 40px;
+          height: 40px;
 
           @include breakpoint( 'tablet' ) {
             min-width: 36px;
